# js_to_oxc

./: .gitignore  Cargo.toml  README.md  eslint.config.js  package.json  pnpm-lock.yaml
.github/workflows/: autofix.yaml  pages.yaml  test.yaml
crates/js_to_oxc/: Cargo.toml
crates/js_to_oxc/src/: array.rs  assignment.rs  bigint.rs  binding.rs  block.rs  catch.rs  chain.rs  class.rs  declaration.rs  expr.rs  for.rs  function.rs  identifier.rs  lib.rs  literal.rs  member.rs  misc.rs  module.rs  number.rs  object.rs  operator.rs  operators.rs  option.rs  private_identifier.rs  program.rs  regexp.rs  statement.rs  switch.rs  template_literal.rs  utils.rs  vec.rs
crates/tests/: Cargo.toml
crates/tests/fixtures/expr/: assignment.js  await.js  binary.js  call.js  chain.js  class.js  conditional.js  function.js  generator.js  import.js  literal.js  logical.js  member.js  misc.js  new.js  object.js  parenthesized.js  sequence.js  unary.js  update.js  void0.js
crates/tests/fixtures/hole/: hole.js
crates/tests/fixtures/stmt/: issue1.js  lz.js  module.js  simple.js
crates/tests/src/: hole.rs  lib.rs  main.rs
crates/tests/src/snapshots/: js_to_oxc_tests__hole__tests_hold__2.snap  js_to_oxc_tests__hole__tests_hold__3.snap  js_to_oxc_tests__hole__tests_hold__4.snap
crates/wasm_binding/: Cargo.toml
crates/wasm_binding/src/: lib.rs
