[package]
edition.workspace = true
license.workspace = true
name = "js_to_oxc_wasm"
repository.workspace = true
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
oxc = { workspace = true }
js_to_oxc = { workspace = true }
wasm-bindgen = { workspace = true }
quote = { workspace = true }
